[metadata]
name = pykib
description = kiosk web browser
license = GNU GPL

[options]
include_package_data = True
packages = pykib, pykib.pykib_base, pykib.plugins
install_requires =
    PyQt6
    PyQt6.Webengine
    PyQt6-Sip
    websockets
    psutil

[options.entry_points]
console_scripts =
    pykib = pykib.pykib:Pykib
